--- a/doc/header.tex
+++ b/doc/header.tex
@@ -56,7 +56,7 @@
 }
 
 % An environment for describing variables in equations
-\newcommand*\wherelistlabel[1]{$#1 =$}
+\newcommand*\wherelistlabel[1]{\ensuremath{#1 =}}
 \newenvironment{wherelist}
   {\begin{list}
     {}
