Add fixes found from going through the LaTeX logs using the new system.

--- a/doc/input-output-reference/src/overview/group-evaporative-coolers.tex
+++ b/doc/input-output-reference/src/overview/group-evaporative-coolers.tex
@@ -78,7 +78,7 @@ EvaporativeCooler:Direct:CelDekPad,
   Supply Outlet Node;           !- Air Outlet Node Name
 \end{lstlisting}
 
-\subsubsection{Outputs}\label{outputs-011}
+\subsubsection{Outputs}
 
 The output variables that are available for this direct evaporative cooler are shown below:
 
@@ -161,7 +161,7 @@ This alpha field is the name of a curve that modifies the effectiveness design v
 
 This numeric field is the primary air design air flow rate in \si{\volumeFlowRate}. This input field is autosizable. If the evaporative cooler is on the main air loop branch, the design flow rate is the same as branch design flow rate. If the evaporative cooler is in the outdoor air system the design flow rate will be the maximum of the outdoor air design flow rate and one-half of the primary air flow rate on the main air loop branch.
 
-\paragraph{Field: Recirculating Water Pump Design Power}\label{field-recirculating-water-pump-design-power}
+\paragraph{Field: Recirculating Water Pump Design Power}
 
 This numeric field is the recirculating and spray pump electric power at the Primary Design Air Flow Rate in \si{\watt}.
 This is the nominal water recirculating and spray pump power of evaporative cooler at primary air design flow rates and cooler design effectiveness.
