--- a/doc/input-output-reference/src/overview/group-zone-equipment.tex
+++ b/doc/input-output-reference/src/overview/group-zone-equipment.tex
@@ -240,7 +240,7 @@ Note that a \hyperref[zonehvacairdistributionunit]{ZoneHVAC:AirDistributionUnit}
 
 Unique identifying name.
 
-\paragraph{Field: Load Distribution Scheme}\label{field-load-distribution-scheme-000}
+\paragraph{Field: Load Distribution Scheme}
 
 The Load Distribution Scheme selects the algorithm used to allocate the current zone load across the zone equipment. There are four choices: SequentialLoad, UniformLoad, UniformPLR, and SequentialUniformPLR. The default is SequentialLoad. In all cases, the equipment operates in the order specifed by the Zone Equipment Cooling Sequence and Heating or No-Load Sequence fields.
 
