--- a/doc/input-output-reference/src/overview/group-surface-construction-elements.tex
+++ b/doc/input-output-reference/src/overview/group-surface-construction-elements.tex
@@ -4017,7 +4017,7 @@ Construction:FfactorGroundFloor,
 
 \subsection{Construction:InternalSource}\label{constructioninternalsource}
 
-In some cases such as radiant systems, a construction will actually have resistance wires or hydronic tubing embedded within the construction. Heat is then either added or removed from this building element to provide heating or cooling to the zone in question. In the case of building-integrated photovoltaics, the energy removed in the form of electricity will form a sink. It is possible to enter such constructions into EnergyPlus with the syntax described below. The definition is similar to the Construction definition with a few additions related to radiant or other systems that will lead to source/sink terms. The internal source capability is available with both the \textbf{ConductionTransferFunction} and \textbf{ConductionFiniteDifference} solution algorithms.~ The only difference is that the two dimensional pipe arrangements are not available to ConductionFiniteDifference. Those fields are ignored in that implementation.
+In some cases, such as radiant systems, a construction will actually have resistance wires or hydronic tubing embedded within the construction. Heat is then either added or removed from this building element to provide heating or cooling to the zone in question. In the case of building-integrated photovoltaics, the energy removed in the form of electricity will form a sink. It is possible to enter such constructions into EnergyPlus with the syntax described below. The definition is similar to the Construction definition with a few additions related to radiant or other systems that will lead to source/sink terms. The internal source capability is available with both the \textbf{ConductionTransferFunction} and \textbf{ConductionFiniteDifference} solution algorithms.~ The only difference is that the two dimensional pipe arrangements are not available to ConductionFiniteDifference. Those fields are ignored in that implementation.
 
 \subsubsection{Inputs}\label{inputs-38}
 
@@ -4033,15 +4033,23 @@ This field is an integer that relates the location of the heat source or sink. T
 
 The nature of this field is similar to the source interface parameter (see previous field) in that it is an integer, refers to the list of material layers that follow, and defines a location after the layer number identified by the user-defined number. In this case, the user is specifying the location for a separate temperature calculation rather than the location of the heat source/sink. This feature is intended to allow users to calculate a temperature within the construction. This might be important in a radiant cooling system where condensation could be a problem. This temperature calculation can assist users in making that determination in absence of a full heat and mass balance calculation.
 
+It should also be noted that when using this construction in conjunction with a low temperature radiant system such as the \textbf{\hyperref[zonehvaclowtemperatureradiantvariableflow]{variable flow}}, \textbf{\hyperref[zonehvaclowtemperatureradiantconstantflow]{constant flow}}, or \textbf{\hyperref[zonehvaclowtemperatureradiantelectric]{electric}} radiant system that this parameter also defines the location for the temperature that is used with the Surface Interior Temperature control.  In other words, when using the Surface Interior Temperature control with a low temperature radiant system, the location for this temperature that is interior to the radiant surface is also defined in part by this input field.  Note that two fields below (\textbf{\hyperref[field-dimensions-for-the-ctf-calculation]{Dimensions for the CTF Calculation}} and \textbf{\hyperref[field-two-dimensional-position-of-interior-temperature-calculation-request]{Two-Dimensional Position of Interior Temperature Calculation Request}}) will also have an impact on this location if the user elects to perform a 2-D solution for the surfaces using this construction.
+
 \paragraph{Field: Dimensions for the CTF Calculation}\label{field-dimensions-for-the-ctf-calculation}
 
 This field is also an integer and refers to the detail level of the calculation. A value of ``1'' states that the user is only interested in a one-dimensional calculation. This is appropriate for electric resistance heating and for hydronic heating (when boiler/hot water heater performance is not affected by return and supply water temperatures). A value of ``2'' will trigger a two-dimensional solution for this surface only. This may be necessary for hydronic radiant cooling situations since chiller performance is affected by the water temperatures provided.
 
-A few things should be noted about requesting two-dimensional solutions. First, the calculation of the conduction transfer functions (CTF) is fairly intensive and will require a significant amount of computing time. Second, the solution regime is two-dimensional internally but it has a one-dimensional boundary condition imposed at the inside and outside surface (i.e., surface temperatures are still isothermal is if the surface was one-dimensional).
+A few things should be noted about requesting two-dimensional solutions. First, the calculation of the conduction transfer functions (CTF) is fairly intensive and will require a significant amount of computing time. Second, the solution regime is two-dimensional internally but it has a one-dimensional boundary condition imposed at the inside and outside surface (i.e., surface temperatures are still isothermal as if the surface was one-dimensional).
 
 \paragraph{Field: Tube Spacing}\label{field-tube-spacing}
 
 This field defines how far apart in meters the hydronic tubing or electrical resistance wires are spaced in the direction perpendicular to the main direction of heat transfer. Note that this parameter is only used for two-dimensional solutions (see previous field).
+
+\paragraph{Field: Two-Dimensional Position of Interior Temperature Calculation Request}\label{field-two-dimensional-position-of-interior-temperature-calculation-request}
+
+This field only has a meaning when the user opts to have a two-dimensional solution in \textbf{\hyperref[field-dimensions-for-the-ctf-calculation]{Dimensions for the CTF Calculation}} above.  It is used in conjunction with the information in \textbf{\hyperref[field-temperature-calculation-requested-after-layer-number]{Temperature Calculation Requested After Layer Number}} above to specify a location for where the simulation will calculate a temperature at the interior of a surface.  The \textbf{\hyperref[field-temperature-calculation-requested-after-layer-number]{Temperature Calculation Requested After Layer Number}} field sets where the position is in the main direction of heat transfer.  This field determines the position of this point in the direction \textbf{perpendicular} to the main direction of heat transfer.  Note that this parameter is a dimensionless value that is allowed to range from 0.0 to 1.0.  A value of 0.0 is used for a position that is in line with the tubing in the construction.  A value of 1.0 is used for a position that is at the mid-point between adjacent tubes.  The user is also given the flexibility to select a point in between those two extremes.
+
+It should also be noted that for values between 0.0 and 1.0 will not allow for exact positioning of the point at which this temperature is calculated.  Instead, it will be used to calculate which node in the state space representation will be used to calculate the temperature.  Currently, EnergyPlus uses seven nodes in the direction perpendicular to the main direction of heat transfer.  In this case, 0.0 represents the first node and 1.0 represents the seventh or last node in the perpendicular direction.  So, this field will be used to determine which node in the direction pendicular to the main direction of heat transfer to use and there are five other nodes (second, third, fourth, fifth, and sixth) that are possible locations.  For example, if the user enters a value of 0.167, the second node will be used.  Likewise, if the user enters a value of 0.1, because this will be closest to the second node, the second node will be used to calculate the internal temperature.  For more information on two-dimensional heat transfer within surfaces using Construction:InternalSource, please refer to the EnergyPlus Engineering Reference.
 
 \paragraph{Field: Outside Layer}\label{field-outside-layer-1}
 
