Construction:AirBoundary - docs more

--- a/doc/tips-and-tricks-using-energyplus/src/building-geometry-shading-zone-model/air-wall-open-air-connection-between-zones.tex
+++ b/doc/tips-and-tricks-using-energyplus/src/building-geometry-shading-zone-model/air-wall-open-air-connection-between-zones.tex
@@ -9,6 +9,6 @@ Modeling the interactions between thermal zones which are connected by a large o
 
   \item[Radiant (long-wave thermal) transfer] can be signifcant between exterior surfaces of a perimeter zone and interior surfaces of a core zone with an open boundary between them. Normally, there is no direct radiant exchange between surfaces in different thermal zones. Construction:AirBoundary groups adjacent zones into a common enclosure for radiant exchange, allowing surfaces in different zones to ``see'' each other.
 
-  \item[Visible and thermal radiant output] from internal gains will not normally cross zone boundaries. Construction:AirBoundary with the GroupedZones option for radiant exchange will distribute these gains across all surfaces in the grouped enclosure.
+  \item[Visible and thermal radiant output] from internal gains will not normally cross zone boundaries. Construction:AirBoundary will distribute these gains across all surfaces in the grouped enclosure.
 \end{description}
 
