Missed this in the list of outputs

--- a/doc/input-output-reference/src/overview/group-zone-forced-air-units.tex
+++ b/doc/input-output-reference/src/overview/group-zone-forced-air-units.tex
@@ -299,7 +299,11 @@ The Ideal Loads air system outdoor air load variables are only calculated when t
 \item
   HVAC,Average,Zone Ideal Loads Supply Air Temperature {[}\si{\degreeCelsius}{]}
 \item
-  HVAC,Average,Zone Ideal Loads Supply Air Humidity Ratio {[}kgWater/kgDryAir{]}      
+  HVAC,Average,Zone Ideal Loads Supply Air Humidity Ratio {[}kgWater/kgDryAir{]}
+\item
+  HVAC,Average,Zone Ideal Loads Mixed Air Temperature {[}\si{\degreeCelsius}{]}
+\item
+  HVAC,Average,Zone Ideal Loads Mixed Air Humidity Ratio {[}kgWater/kgDryAir{]}            
 \end{itemize}
 
 \paragraph{Ideal Loads Output Variable Overview}\label{ideal-loads-output-variable-overview}
