Update input output reference latex documentation. Compiles ok.

--- a/doc/input-output-reference/src/input-for-output.tex
+++ b/doc/input-output-reference/src/input-for-output.tex
@@ -2081,10 +2081,37 @@ Output from EnergyPlus can be written to SQLite files for manipulation outside s
 
 Currently, there are limited capabilities for specifying SQLite generation.~ The Simple option will include all of the predefined database tables as well as time series related data.~ Using the SimpleAndTabular choice adds database tables related to the tabular reports that are already output by EnergyPlus in other formats.~ The description for SQLite outputs is described fully in the Output Details document.
 
-And one includes it in the IDF using the following.
+\paragraph{Field: Tabular Unit Conversion}\label{field-tabular-unit-conversion}
 
+When the Option Type field is set to SimpleAndTabular so that the tabular reports are included in the SQL file, this field is active. The Tabular Unit Conversion field determines if any unit conversions will be performed for the values of the tabular reports that are included in the SQL file. This field only affects the unit conversions for the tabular reports in the SQL file and does not convert the units of the time series data in the SQL file. It also has no impact on the unit conversions for the tabular reports in the HTML or other output formats. 
+
+This field is optional and, if not specified, defaults to UseOutputControlTableStyle which is using the same unit conversion that appears in the OutputControl:Table:Style object. Five different input options are available:
+
+\begin{itemize}
+\item 
+- UseOutputControlTableStyle - use the same unit conversion as in OutputControl:Table:Style
+\item 
+- None – no conversions performed
+\item 
+- JtoKWH – Joules converted into kWh (1 / 3,600,000)
+\item 
+- JtoMJ – Joules converted into Megajoules (1 / 1,000,000)
+\item
+- JtoGJ – Joules converted into Gigajoules (1 / 1,000,000,000)
+\item 
+- InchPound – convert all annual, monthly, economics and timebins tabular values to common InchPound equivalent
+\end{itemize}
+
+When no unit conversions is selected the energy is reported in the form of Joules but since the magnitude of those numbers for many buildings is very large, these other conversion factors are available. 
+
+The JtoKWH, JtoMJ and JtoGJ unit conversion input option applies only to the Output:Table:Monthly reports and partially to the ABUPS report. For ABUPS, the JtoKWH option changes the report but the JtoMJ and JtoGJ options do not change the report since they it is already in MJ/m2 and GJ. In addition, the JtoKWH option also changes results in the LEED Summary report changing GJ to kWh and MJW/m2 to kWh/m2. The InchPound unit conversion input option applies to all annual, monthly, timebins and
+economic reports that appear in the SQL file. 
+
+An example IDF input object follows.
 \begin{lstlisting}
-Output:SQLite, Simple;
+Output:SQLite,
+   SimpleAndTabular,    !- Option Type
+   InchPound;           !- Unit Conversion
 \end{lstlisting}
 
 \subsection{OutputControl:Files}\label{outputcontrolfiles}
