Minor corrections on Tex document.

--- a/doc/input-output-reference/src/input-for-output.tex
+++ b/doc/input-output-reference/src/input-for-output.tex
@@ -2089,17 +2089,17 @@ This field is optional and, if not specified, defaults to UseOutputControlTableS
 
 \begin{itemize}
 \item 
-- UseOutputControlTableStyle - use the same unit conversion as in OutputControl:Table:Style
+UseOutputControlTableStyle -- use the same unit conversion as in OutputControl:Table:Style
 \item 
-- None – no conversions performed
+None -- no conversions performed
 \item 
-- JtoKWH – Joules converted into kWh (1 / 3,600,000)
+JtoKWH -- Joules converted into kWh (1 / 3,600,000)
 \item 
-- JtoMJ – Joules converted into Megajoules (1 / 1,000,000)
+JtoMJ -- Joules converted into Megajoules (1 / 1,000,000)
 \item
-- JtoGJ – Joules converted into Gigajoules (1 / 1,000,000,000)
+JtoGJ -- Joules converted into Gigajoules (1 / 1,000,000,000)
 \item 
-- InchPound – convert all annual, monthly, economics and timebins tabular values to common InchPound equivalent
+InchPound -- convert all annual, monthly, economics and timebins tabular values to common InchPound equivalent
 \end{itemize}
 
 When no unit conversions is selected the energy is reported in the form of Joules but since the magnitude of those numbers for many buildings is very large, these other conversion factors are available. 
