--- a/doc/ems-application-guide/src/ems-actuators/thermal-envelope.tex
+++ b/doc/ems-application-guide/src/ems-actuators/thermal-envelope.tex
@@ -59,7 +59,7 @@ Three actuators, called ``Surface,''~ are available for controlling the temperat
 
 \begin{itemize}
 \item
-  ``Outdoor Air Drybulb Temperature.''~ This is the dryblub temperature of the ambient outdoor air exposed to the surface, in degrees C. This is the temperature used for surface convection heat transfer boundary conditions on the outdoor, outside-face, of the surface exposed to exterior environment (unless it is raining).
+  ``Outdoor Air Drybulb Temperature.''~ This is the drybulb temperature of the ambient outdoor air exposed to the surface, in degrees C. This is the temperature used for surface convection heat transfer boundary conditions on the outdoor, outside-face, of the surface exposed to exterior environment (unless it is raining).
 \item
   ``Outdoor Air Wetbulb Temperature.''~ This is the wetbulb temperature of the ambient outdoor air exposed to the surface, in degrees C. When the weather indicates that it is raining outside, the surface convection heat transfer boundary conditions use the wetbulb temperature rather than the drybulb temperature (along with a high convection heat transfer coefficient). This override allows changing the outdoor wetbulb experienced by the surface exposed to exterior environment (when it is raining).
 \item
@@ -67,7 +67,8 @@ Three actuators, called ``Surface,''~ are available for controlling the temperat
 \item
   ``Outdoor Air Wind Direction.''~ This is the wind direction of the outdoor air exposed to the surface, in degree. This is the direction used for some surface convection heat transfer correlations for the outside-face of surfaces exposed to wind.
 \item
-  ``View Factor To Ground.''~ This is the view factor to ground of the outdoor air exposed to the surface. 
+  ``View Factor To Ground.''~ This is the view factor to ground of the outdoor air exposed to the surface. This is the view factor used for solar and radiant heat exchange. This is useful from the calling point named BeginZoneTimestepAfterInitHeatBalance and BeginZoneTimestepBeforeInitHeatBalance.
+\end{itemize}
 
 Four actuators, called ``Other Side Boundary Conditions,'' are available for controlling the convection and radiation boundary conditions for surfaces that use ``OtherSideConditionsModel.''~ Each instance of a SurfaceProperty:OtherSideConditionsModel object will make available these actuators with the following four control types:
 
