--- a/doc/input-output-reference/src/overview/group-internal-gains-people-lights-other.tex
+++ b/doc/input-output-reference/src/overview/group-internal-gains-people-lights-other.tex
@@ -388,6 +388,14 @@ People specific outputs include:
   Zone,Average,Zone Thermal Comfort CEN 15251 Adaptive Model Running Average Outdoor Air Temperature {[}C{]}
 \item
   Zone,Average,Zone Thermal Comfort CEN 15251 Adaptive Model Temperature {[}C{]}
+\item
+  Zone,Average,Zone Thermal Comfort ASHRAE 55 Elevated Air Speed Cooling Effect {[}C{]}
+\item
+  Zone,Average,Zone Thermal Comfort ASHRAE 55 Elevated Air Speed Cooling Effect Adjusted PMV {[]}
+\item
+  Zone,Average,Zone Thermal Comfort ASHRAE 55 Elevated Air Speed Cooling Effect Adjusted PPD {[]}
+\item
+  Zone,Average,Zone Thermal Comfort ASHRAE 55 Ankle Draft PPD {[]}
 \end{itemize}
 
 It should be noted that if a user is trying to output the Standard Effective Temperature (SET) that the Pierce two-node model must be selected.  This variable is calculated as part of the Pierce model and can be seen in the output by requesting Zone Thermal Comfort Pierce Model Standard Effective Temperature.
